--- a/sbgb-gui/angular.json
+++ b/sbgb-gui/angular.json
@@ -31,14 +31,10 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/theme.scss"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -107,9 +103,6 @@
     }
   },
   "cli": {
-    "analytics": "e331bdf6-2928-40b0-88b2-844380760a43",
-    "schematicCollections": [
-      "@ngrx/schematics"
-    ]
+    "analytics": false
   }
 }
