--- a/sbgb-gui/package.json
+++ b/sbgb-gui/package.json
@@ -1,31 +1,25 @@
 {
   "name": "sbgb-gui",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:sbgb-gui": "node dist/sbgb-gui/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
-    "@angular/cdk": "^17.2.0",
+    "@angular/cdk": "^17.2.1",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
-    "@angular/material": "^17.2.0",
+    "@angular/material": "^17.2.1",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
-    "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
-    "@angular/ssr": "^17.2.0",
-    "@ngrx/eslint-plugin": "^17.1.0",
-    "@ngrx/store": "^17.1.0",
-    "@ngrx/store-devtools": "^17.1.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,10 +29,7 @@
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
-    "@ngrx/schematics": "^17.1.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
