--- a/sbgb-configuration/src/main/resources/application.yml
+++ b/sbgb-configuration/src/main/resources/application.yml
@@ -1,3 +1,24 @@
 server:
   port: 8080
-
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/db-sbgb
+    username: user_sbgb
+    password: pw_sbgb
+    driverClassName: org.postgresql.Driver
+    hikari:
+      connection-timeout: 30000
+      login-timeout: 30000
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operations-sorter: method
+    doc-expansion: none
