--- a/sbgb-configuration/src/main/resources/application.yml
+++ b/sbgb-configuration/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
     generate-ddl: false
     hibernate:
       ddl-auto: none
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.xml
+    enabled: true
 springdoc:
   api-docs:
     path: /api-docs
