--- a/sbgb-configuration/src/main/resources/application.yml
+++ b/sbgb-configuration/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/db-sbgb
-    username: user_sbgb
-    password: pw_sbgb
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/db-sbgb}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driverClassName: org.postgresql.Driver
     hikari:
       connection-timeout: 30000
