feat(config): add MapStruct dependencies for mapper generation
Took 8 seconds

--- a/sbgb-configuration/pom.xml
+++ b/sbgb-configuration/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>sbgb-infrastructure</artifactId>
         </dependency>
 
+        <!-- Add mapstruct dependency for generated mappers -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
