chore(workflow): implement actuator git info and refactor bump-version logic

--- a/sbgb-configuration/src/main/resources/application.yml
+++ b/sbgb-configuration/src/main/resources/application.yml
@@ -37,6 +37,8 @@ management:
   info:
     env:
       enabled: true
+    git:
+      mode: full # Permet d'avoir le SHA complet et les détails du commit
 info:
   app:
     name: SpaceBackGroundBuilder
