--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -31,19 +31,27 @@ jobs:
       - name: Determine bump type
         id: bump
         run: |
-          SOURCE="${{ github.event.pull_request.head.ref }}"
-          TARGET="${{ github.event.pull_request.base.ref }}"
-
-          if [[ "$SOURCE" == fix/* ]]; then
-            echo "type=patch" >> $GITHUB_OUTPUT
-            echo "Bump PATCH (fix branch: $SOURCE)"
-          elif [[ "$TARGET" == "master" ]]; then
-            echo "type=major" >> $GITHUB_OUTPUT
-            echo "Bump MAJOR (merge into master)"
+          # 1. Priorité aux Labels (Recommandation 3)
+          LABELS='${{ toJson(github.event.pull_request.labels.*.name) }}'
+          if echo "$LABELS" | grep -iq "major"; then
+            TYPE="major"
+          elif echo "$LABELS" | grep -iq "minor"; then
+            TYPE="minor"
+          elif echo "$LABELS" | grep -iq "patch"; then
+            TYPE="patch"
           else
-            echo "type=minor" >> $GITHUB_OUTPUT
-            echo "Bump MINOR (merge into develop)"
+            # 2. Logique de repli affinée (Recommandation 2)
+            SOURCE="${{ github.event.pull_request.head.ref }}"
+            TARGET="${{ github.event.pull_request.base.ref }}"
+            if [[ "$SOURCE" == fix/* ]]; then
+              TYPE="patch"
+            elif [[ "$TARGET" == "master" ]]; then
+              TYPE="minor" # Un merge sur master est par défaut une mineure
+            else
+              TYPE="minor"
+            fi
           fi
+          echo "type=$TYPE" >> $GITHUB_OUTPUT
 
       - name: Bump version
         run: ./scripts/bump-version.sh ${{ steps.bump.outputs.type }}
@@ -51,10 +59,18 @@ jobs:
       - name: Push commit and tag
         run: |
           TARGET="${{ github.event.pull_request.base.ref }}"
+          
+          # 3. Sécurité : Rebase avant push pour éviter les échecs de concurrence (Recommandation 4)
+          git pull origin $TARGET --rebase
+          
           git push origin $TARGET
           git push origin --tags
           
+          # 4. Synchronisation propre Master -> Develop (Recommandation 1)
           if [[ "$TARGET" == "master" ]]; then
-            echo "Pushing new version to develop branch as well"
-            git push origin HEAD:develop
+            echo "Merging master changes back to develop..."
+            git fetch origin develop
+            git checkout develop
+            git merge master -m "chore: sync develop with master after version bump [skip ci]"
+            git push origin develop
           fi
