feat: Spring Boot Admin — page d'administration serveur sur /admin
- spring-boot-admin-starter-server + client (v3.4.5)
- @EnableAdminServer sur SbgbApplication
- Exposition endpoints : health, metrics, caches, loggers, env, threaddump, heapdump
- Client auto-enregistré sur localhost:8080
- Accès : http://localhost:8080/admin

--- a/sbgb-configuration/src/main/resources/application.yml
+++ b/sbgb-configuration/src/main/resources/application.yml
@@ -30,15 +30,24 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics
+        include: health,info,metrics,caches,loggers,env,threaddump,heapdump,scheduledtasks
   endpoint:
     health:
-      show-details: when-authorized
+      show-details: always
+    caches:
+      enabled: true
   info:
     env:
       enabled: true
     git:
-      mode: full # Permet d'avoir le SHA complet et les détails du commit
+      mode: full
+
+spring.boot.admin:
+  context-path: /admin
+  client:
+    url: http://localhost:${server.port}
+    instance:
+      service-base-url: http://localhost:${server.port}
 info:
   app:
     name: SpaceBackGroundBuilder
