--- a/sbgb-landing/nginx.conf
+++ b/sbgb-landing/nginx.conf
@@ -24,6 +24,10 @@ http {
             add_header Content-Type text/plain;
         }
 
+        location = /sbgb {
+            return 301 /sbgb/;
+        }
+
         location = /sbgb/index.html {
             root /usr/share/nginx/html;
             add_header Cache-Control "no-cache, no-store, must-revalidate";
